--- a/eCommerce(MVC).csproj
+++ b/eCommerce(MVC).csproj
@@ -7,4 +7,8 @@
     <RootNamespace>eCommerce_MVC_</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.3" />
+  </ItemGroup>
+
 </Project>
